Добавил шрифты cardo raleway

--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 </head>
 <body>
     <header class="header">
+    
     </header>
-    main.
+    
+    <main>
+    </main>
+
+    <footer>
+    </footer>
 
     <script src="index.js"></script>
 </body>
