Заверстал секцию header > nav

--- a/index.html
+++ b/index.html
@@ -9,14 +9,27 @@
     <title>ActiveBox</title>
 </head>
 <body>
-    <header class="header">
-    
+    <header class="header ">
+        <nav class="header-nav">
+            <ul class="header-nav__list">
+                <li class="header-nav__item">
+                    <a href="#" class="header-nav__link">
+                        <img src="img/logo.svg" alt="ActiveBox Logo" width="270" height="101">
+                    </a>
+                </li>
+                <li class="header-nav__item"><a href="#" class="header-nav__link header-nav__link--active">features</a></li>
+                <li class="header-nav__item"><a href="#" class="header-nav__link">works</a></li>
+                <li class="header-nav__item"><a href="#" class="header-nav__link">our team</a></li>
+                <li class="header-nav__item"><a href="#" class="header-nav__link">testimonials</a></li>
+                <li class="header-nav__item"><a href="#" class="header-nav__link">download</a></li>
+            </ul>
+        </nav>
     </header>
     
-    <main>
+    <main class="main">
     </main>
 
-    <footer>
+    <footer class="footer">
     </footer>
 
     <script src="index.js"></script>
