--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         <img src="img/logo.svg" alt="ActiveBox Logo" width="270" height="101">
                     </a>
                 </li>
-                <li class="header-nav__item"><a href="#" class="header-nav__link header-nav__link--active">features</a></li>
+                <li class="header-nav__item headaer-nav__item--active"><a href="#" class="header-nav__link header-nav__link--active">features</a></li>
                 <li class="header-nav__item"><a href="#" class="header-nav__link">works</a></li>
                 <li class="header-nav__item"><a href="#" class="header-nav__link">our team</a></li>
                 <li class="header-nav__item"><a href="#" class="header-nav__link">testimonials</a></li>
@@ -32,10 +32,67 @@
             <button type="button" class="banner__button button button--red">Find Out More</button>
         </div>
     </header>
-    
     <main class="main">
+        <section class="feature">
+            <h2 class="visually-hidden">Our Feature</h2>
+            <ul class="feature__list">
+                <li class="feature__item">
+                    <img class="feature__img" src="img/feature-icon_1.svg" alt="Custom" width="100" height="100">
+                    <h4 class="feature__title">Easily Customised</h4>
+                    <p class="feature__text">
+                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. 
+                        Nullam quis risus eget urna mollis ornare vel eu leo. 
+                        Donec ullamcorper nulla non metus auctor fringilla.
+                    </p>
+                </li>
+                <li class="feature__item">
+                    <img class="feature__img" src="img/feature-icon_2.svg" alt="Responsive" width="100" height="100">
+                    <h4 class="feature__title">Responsive Ready</h4>
+                    <p class="feature__text">
+                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. 
+                        Nullam quis risus eget urna mollis ornare vel eu leo. 
+                        Donec ullamcorper nulla non metus auctor fringilla.
+                    </p>
+                </li>
+                <li class="feature__item">
+                    <img class="feature__img" src="img/feature-icon_3.svg" alt="Modern" width="100" height="100">
+                    <h4 class="feature__title">Modern Design</h4>
+                    <p class="feature__text">
+                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. 
+                        Nullam quis risus eget urna mollis ornare vel eu leo. 
+                        Donec ullamcorper nulla non metus auctor fringilla.
+                    </p>
+                </li>
+                <li class="feature__item">
+                    <img class="feature__img" src="img/feature-icon_4.svg" alt="Clean" width="100" height="100">
+                    <h4 class="feature__title">Clean Code</h4>
+                    <p class="feature__text">
+                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. 
+                        Nullam quis risus eget urna mollis ornare vel eu leo. 
+                        Donec ullamcorper nulla non metus auctor fringilla.
+                    </p>
+                </li>
+                <li class="feature__item">
+                    <img class="feature__img" src="img/feature-icon_5.svg" alt="Ship" width="100" height="100">
+                    <h4 class="feature__title">Ready to Ship</h4>
+                    <p class="feature__text">
+                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. 
+                        Nullam quis risus eget urna mollis ornare vel eu leo. 
+                        Donec ullamcorper nulla non metus auctor fringilla.
+                    </p>
+                </li>
+                <li class="feature__item">
+                    <img class="feature__img" src="img/feature-icon_6.svg" alt="Download Free" width="100" height="100">
+                    <h4 class="feature__title">Download for Free</h4>
+                    <p class="feature__text">
+                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. 
+                        Nullam quis risus eget urna mollis ornare vel eu leo. 
+                        Donec ullamcorper nulla non metus auctor fringilla.
+                    </p>
+                </li>
+            </ul>
+        </section>
     </main>
-
     <footer class="footer">
     </footer>
 
