--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
     <main class="main">
         <section class="feature">
-            <h2 class="visually-hidden">Our Feature</h2>
+            <h2 class="visually-hidden">Our Feature.</h2>
             <ul class="feature__list">
                 <li class="feature__item">
                     <img class="feature__img" src="img/feature-icon_1.svg" alt="Custom" width="100" height="100">
@@ -89,6 +89,83 @@
                         Nullam quis risus eget urna mollis ornare vel eu leo. 
                         Donec ullamcorper nulla non metus auctor fringilla.
                     </p>
+                </li>
+            </ul>
+        </section>
+        <section class="our-work">
+            <h2 class="visually-hidden">Our-Work.</h2>
+            <ul class="our-work__list">
+                <li class="our-work__item">
+                    <a href="#" class="our-work-link">
+                        <div class="our-work-link__content">
+                            <h3 class="our-work-title">Project Name</h3>
+                            <span class="our-work-text">User Interface Design</span>
+                        </div>
+                        <img src="img/our-work_1.jpg" alt="lobby" class="our-work-img">
+                    </a>
+                </li>
+                <li class="our-work__item">
+                    <a href="#" class="our-work-link">
+                        <div class="our-work-link__content">
+                            <h3 class="our-work-title">Project Name</h3>
+                            <span class="our-work-text">User Interface Design</span>
+                        </div>
+                        <img src="img/our-work_2.jpg" alt="living-room" class="our-work-img">
+                    </a>
+                </li>
+                <li class="our-work__item">
+                    <a href="#" class="our-work-link">
+                        <div class="our-work-link__content">
+                            <h3 class="our-work-title">Project Name</h3>
+                            <span class="our-work-text">User Interface Design</span>
+                        </div>
+                        <img src="img/our-work_3.jpg" alt="hall" class="our-work-img">
+                    </a>
+                </li>
+                <li class="our-work__item">
+                    <a href="#" class="our-work-link">
+                        <div class="our-work-link__content">
+                            <h3 class="our-work-title">Project Name</h3>
+                            <span class="our-work-text">User Interface Design</span>
+                        </div>
+                        <img src="img/our-work_4.jpg" alt="2 chairs" class="our-work-img">
+                    </a>
+                </li>
+                <li class="our-work__item">
+                    <a href="#" class="our-work-link">
+                        <div class="our-work-link__content">
+                            <h3 class="our-work-title">Project Name</h3>
+                            <span class="our-work-text">User Interface Design</span>
+                        </div>
+                        <img src="img/our-work_5.jpg" alt="waiting room" class="our-work-img">
+                    </a>
+                </li>
+                <li class="our-work__item">
+                    <a href="#" class="our-work-link">
+                        <div class="our-work-link__content">
+                            <h3 class="our-work-title">Project Name</h3>
+                            <span class="our-work-text">User Interface Design</span>
+                        </div>
+                        <img src="img/our-work_6.jpg" alt="kitchen" class="our-work-img">
+                    </a>
+                </li>
+                <li class="our-work__item">
+                    <a href="#" class="our-work-link">
+                        <div class="our-work-link__content">
+                            <h3 class="our-work-title">Project Name</h3>
+                            <span class="our-work-text">User Interface Design</span>
+                        </div>
+                        <img src="img/our-work_7.jpg" alt="bedroom" class="our-work-img">
+                    </a>
+                </li>
+                <li class="our-work__item">
+                    <a href="#" class="our-work-link">
+                        <div class="our-work-link__content">
+                            <h3 class="our-work-title">Project Name</h3>
+                            <span class="our-work-text">User Interface Design</span>
+                        </div>
+                        <img src="img/our-work_8.jpg" alt="living-room" class="our-work-img">
+                    </a>
                 </li>
             </ul>
         </section>
