Добавил Раздел our-team

--- a/index.html
+++ b/index.html
@@ -169,6 +169,90 @@
                 </li>
             </ul>
         </section>
+        <section class="our-team">
+            <ul class="our-team__list">
+                <li class="our-team__item">
+                    <img src="img/our-personal_1.jpg" alt="Ruth Woods Ceo" class="our-team-img">
+                    <h3 class="our-team-title">Ruth Woods</h3>
+                    <span class="our-team-position">founder, ceo</span>
+                    <p class="our-team-text">
+                        Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. 
+                        Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.
+                    </p>
+                    <ol class="social-team__list">
+                        <li class="social-team__item">
+                            <a href="https://www.facebook.com/" target="_blank" class="social-team-link"><img src="img/facebook_icon.svg" alt="Facebook."></a>
+                        </li>
+                        <li class="social-team__item">
+                            <a href="https://www.twitter.com/" target="_blank" class="social-team-link"><img src="img/twitter_icon.svg" alt="Twitter."></a>
+                        </li>
+                        <li class="social-team__item">
+                            <a href="https://www.linkedin.com/" target="_blank" class="social-team-link"><img src="img/linkedin_icon.svg" alt="Linkedin."></a>
+                        </li>
+                    </ol>
+                </li>
+                <li class="our-team__item">
+                    <img src="img/our-personal_2.jpg" alt="Timothy Reed founder developer" class="our-team-img">
+                    <h3 class="our-team-title">Timothy Reed</h3>
+                    <span class="our-team-position">co-founder, developer</span>
+                    <p class="our-team-text">
+                        Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. 
+                        Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.
+                    </p>
+                    <ol class="social-team__list">
+                        <li class="social-team__item">
+                            <a href="https://www.facebook.com/" target="_blank" class="social-team-link"><img src="img/facebook_icon.svg" alt="Facebook."></a>
+                        </li>
+                        <li class="social-team__item">
+                            <a href="https://www.twitter.com/" target="_blank" class="social-team-link"><img src="img/twitter_icon.svg" alt="Twitter."></a>
+                        </li>
+                        <li class="social-team__item">
+                            <a href="https://www.linkedin.com/" target="_blank" class="social-team-link"><img src="img/linkedin_icon.svg" alt="Linkedin."></a>
+                        </li>
+                    </ol>
+                </li>
+                <li class="our-team__item">
+                    <img src="img/our-personal_3.jpg" alt="Victoria Vladez UI Designer" class="our-team-img">
+                    <h3 class="our-team-title">Victoria Vladez</h3>
+                    <span class="our-team-position">ui designer</span>
+                    <p class="our-team-text">
+                        Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. 
+                        Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.
+                    </p>
+                    <ol class="social-team__list">
+                        <li class="social-team__item">
+                            <a href="https://www.facebook.com/" target="_blank" class="social-team-link"><img src="img/facebook_icon.svg" alt="Facebook."></a>
+                        </li>
+                        <li class="social-team__item">
+                            <a href="https://www.twitter.com/" target="_blank" class="social-team-link"><img src="img/twitter_icon.svg" alt="Twitter."></a>
+                        </li>
+                        <li class="social-team__item">
+                            <a href="https://www.linkedin.com/" target="_blank" class="social-team-link"><img src="img/linkedin_icon.svg" alt="Linkedin."></a>
+                        </li>
+                    </ol>
+                </li>
+                <li class="our-team__item">
+                    <img src="img/our-personal_4.jpg" alt="Beverly Little data scientist" class="our-team-img">
+                    <h3 class="our-team-title">Beverly Little</h3>
+                    <span class="our-team-position">data scientist</span>
+                    <p class="our-team-text">
+                        Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. 
+                        Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.
+                    </p>
+                    <ol class="social-team__list">
+                        <li class="social-team__item">
+                            <a href="https://www.facebook.com/" target="_blank" class="social-team-link"><img src="img/facebook_icon.svg" alt="Facebook."></a>
+                        </li>
+                        <li class="social-team__item">
+                            <a href="https://www.twitter.com/" target="_blank" class="social-team-link"><img src="img/twitter_icon.svg" alt="Twitter."></a>
+                        </li>
+                        <li class="social-team__item">
+                            <a href="https://www.linkedin.com/" target="_blank" class="social-team-link"><img src="img/linkedin_icon.svg" alt="Linkedin."></a>
+                        </li>
+                    </ol>
+                </li>
+            </ul>
+        </section>
     </main>
     <footer class="footer">
     </footer>
