section Reviews added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="shortcut icon" href="img/favicon.svg">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
     <link rel="stylesheet" href="scss/style.scss">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ActiveBox</title>
@@ -252,6 +253,45 @@
                     </ol>
                 </li>
             </ul>
+        </section>
+        <section class="reviews">
+                <!-- <div class="container">
+                    <div class="row">
+                    <div class="col reviews-img">
+                        <img src="img/reviews-background.jpg" alt="reviews-2" width="741" height="490">
+                    </div>
+                    <div class="col reviews-content">
+                        <h3 class="reviews-title">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</h3>
+                        <p class="reviews-text">Susan Sims, Interaction Designer at XYZ</p>
+                    </div>
+                    </div>
+                </div> -->
+
+                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                        <div class="carousel-item reviews-content">
+                            <img src="img/reviews-background.jpg" class="d-block w-50" alt="reviews">
+                            <div class="reviews-content--text">
+                                <h3 class="reviews-title">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</h3>
+                                <p class="reviews-text">Susan Sims, Interaction Designer at XYZ</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item reviews-content">
+                            <img src="img/reviews-background2.jpeg" class="d-block w-50" alt="reviews-2">
+                            <div class="reviews-content--text">
+                                <h3 class="reviews-title">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</h3>
+                                <p class="reviews-text">Susan Sims, Interaction Designer at XYZ</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item reviews-content">
+                            <img src="img/reviews-background3.jpeg" class="d-block w-50" alt="reviews-3">
+                            <div class="reviews-content--text">
+                                <h3 class="reviews-title">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</h3>
+                                <p class="reviews-text">Susan Sims, Interaction Designer at XYZ</p>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
         </section>
     </main>
     <footer class="footer">
