--- a/index.html
+++ b/index.html
@@ -91,6 +91,24 @@
                         Donec ullamcorper nulla non metus auctor fringilla.
                     </p>
                 </li>
+                <li class="feature__item">
+                    <img class="feature__img" src="img/feature-icon_5.svg" alt="Ship" width="100" height="100">
+                    <h4 class="feature__title">Ready to Ship</h4>
+                    <p class="feature__text">
+                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. 
+                        Nullam quis risus eget urna mollis ornare vel eu leo. 
+                        Donec ullamcorper nulla non metus auctor fringilla.
+                    </p>
+                </li>
+                <li class="feature__item">
+                    <img class="feature__img" src="img/feature-icon_6.svg" alt="Download Free" width="100" height="100">
+                    <h4 class="feature__title">Download for Free</h4>
+                    <p class="feature__text">
+                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. 
+                        Nullam quis risus eget urna mollis ornare vel eu leo. 
+                        Donec ullamcorper nulla non metus auctor fringilla.
+                    </p>
+                </li>
             </ul>
         </section>
         <section class="our-work">
@@ -166,6 +184,24 @@
                             <span class="our-work-text">User Interface Design</span>
                         </div>
                         <img src="img/our-work_8.jpg" alt="living-room" class="our-work-img">
+                    </a>
+                </li>
+                <li class="our-work__item">
+                    <a href="#" class="our-work-link">
+                        <div class="our-work-link__content">
+                            <h3 class="our-work-title">Project Name</h3>
+                            <span class="our-work-text">User Interface Design</span>
+                        </div>
+                        <img src="img/our-work_1.jpg" alt="lobby" class="our-work-img">
+                    </a>
+                </li>
+                <li class="our-work__item">
+                    <a href="#" class="our-work-link">
+                        <div class="our-work-link__content">
+                            <h3 class="our-work-title">Project Name</h3>
+                            <span class="our-work-text">User Interface Design</span>
+                        </div>
+                        <img src="img/our-work_2.jpg" alt="living-room" class="our-work-img">
                     </a>
                 </li>
             </ul>
@@ -252,6 +288,47 @@
                         </li>
                     </ol>
                 </li>
+                <li class="our-team__item">
+                    <img src="img/our-personal_1.jpg" alt="Ruth Woods Ceo" class="our-team-img">
+                    <h3 class="our-team-title">Ruth Woods</h3>
+                    <span class="our-team-position">founder, ceo</span>
+                    <p class="our-team-text">
+                        Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. 
+                        Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.
+                    </p>
+                    <ol class="social-team__list">
+                        <li class="social-team__item">
+                            <a href="https://www.facebook.com/" target="_blank" class="social-team-link"><img src="img/facebook_icon.svg" alt="Facebook."></a>
+                        </li>
+                        <li class="social-team__item">
+                            <a href="https://www.twitter.com/" target="_blank" class="social-team-link"><img src="img/twitter_icon.svg" alt="Twitter."></a>
+                        </li>
+                        <li class="social-team__item">
+                            <a href="https://www.linkedin.com/" target="_blank" class="social-team-link"><img src="img/linkedin_icon.svg" alt="Linkedin."></a>
+                        </li>
+                    </ol>
+                </li>
+                <li class="our-team__item">
+                    <img src="img/our-personal_2.jpg" alt="Timothy Reed founder developer" class="our-team-img">
+                    <h3 class="our-team-title">Timothy Reed</h3>
+                    <span class="our-team-position">co-founder, developer</span>
+                    <p class="our-team-text">
+                        Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. 
+                        Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.
+                    </p>
+                    <ol class="social-team__list">
+                        <li class="social-team__item">
+                            <a href="https://www.facebook.com/" target="_blank" class="social-team-link"><img src="img/facebook_icon.svg" alt="Facebook."></a>
+                        </li>
+                        <li class="social-team__item">
+                            <a href="https://www.twitter.com/" target="_blank" class="social-team-link"><img src="img/twitter_icon.svg" alt="Twitter."></a>
+                        </li>
+                        <li class="social-team__item">
+                            <a href="https://www.linkedin.com/" target="_blank" class="social-team-link"><img src="img/linkedin_icon.svg" alt="Linkedin."></a>
+                        </li>
+                    </ol>
+                </li>
+                
             </ul>
         </section>
         <section class="reviews">
